--- a/src/style/Main.css
+++ b/src/style/Main.css
@@ -35,11 +35,12 @@
 
 .text {
   font-size: 80px;
+  font-weight: bold;
   color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 
 .box a {
