--- a/src/style/Question.css
+++ b/src/style/Question.css
@@ -7,6 +7,7 @@
   min-height: 100vh; /* 최소 너비가 100vh이고 만약애 자식이 커지면 부모도 같이 커짐 */
   width: 100%; /*모바일의 경우 width: 100%로 설정된다. */
   margin: 0 auto;
+  flex-wrap: nowrap; /* 한 줄로 유지 */
   background-image: url("../Images/bk.gif");
   background-repeat: no-repeat;
   background-position: top center;
@@ -18,7 +19,7 @@
   color: #fff;
   font-size: 35px;
   width: 100%;
-  height: 400px;
+  height: 300px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -33,14 +34,16 @@
     255,
     0.178
   ); /* 배경색을 흰색으로, 투명도를 50%로 설정 */
-  font-size: 80px;
-  width: 1800px;
+  font-size: 60px;
+  width: 100%;
   height: 400px;
   color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 100px;
+  flex-wrap: nowrap; /* 한 줄로 유지 */
+  overflow: hidden;
 }
 
 .box1 a {
@@ -48,21 +51,21 @@
   color: inherit; /* 기본 링크 색상을 유지 (선택 사항) */
 }
 
-.link {
+.link1 {
   font-size: 35px;
   font-family: "Ramche";
   color: #fff;
   background-color: transparent; /* 버튼의 배경색을 투명으로 설정 */
   border: none; /* 버튼의 테두리 제거 (선택 사항) */
 }
-.menu-item {
+.menu-item1 {
   display: flex;
   align-items: center;
   margin-right: 40px;
   margin-bottom: 100px;
 }
 
-.menu-item > span {
+.menu-item1 > span {
   display: inline; /* 기호를 기본적으로 표시하지 않음 */
   vertical-align: middle; /* 수직 정렬 설정 */
   position: relative; /* 상대 위치 설정 */
@@ -70,12 +73,14 @@
   opacity: 0; /* 처음에는 투명하게 설정 */
   transition: opacity 0.3s ease; /* 부드러운 페이드 인/아웃 효과를 위한 트랜지션 설정 */
   padding-right: 10px;
+  color: #fff;
+  font-size: 30px;
 }
 
-.menu-item:hover > span {
+.menu-item1:hover > span {
   opacity: 1; /* 하버 상태에서 투명도를 1로 설정하여 기호를 보이게 함 */
 }
-@media (max-width: 700px) {
+@media (max-width: 1300px) {
   .main-box1 {
     white-space: nowrap; /* 화면이 700px 미만으로 줄어들면 텍스트 짤림 */
     overflow: hidden;
